tests/NormalTests/paczka1/small_fuzzy/19730428.err
Error in line 1: VrDvogbNE A441 61,0
Error in line 9: q61 S225 87,5
